--- a/src/App.css
+++ b/src/App.css
@@ -66,13 +66,14 @@ body {
 }
 .form-group {
   margin-bottom: 15px;
+  text-align: left;
 }
 .form-group label {
   display: block;
   font-weight: bold;
 }
 .form-group input {
-  width: 100%;
+  width: 95%;
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -92,4 +93,7 @@ body {
 }
 .form-group button:hover {
   background-color: #0056b3;
+}
+.align-center {
+  text-align: center;
 }
